<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>combofox_parking</name>
  <version>0.0.0</version>
  <description>ComboFox package to set the robot in parking pose</description>
  <maintainer email="fabrisd.wm@gmail.com">Daniele Fabris</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>ibt_ros2_driver</depend>
  <depend>ibt_ros2_interfaces</depend>
  <depend>combo_box_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
